--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,9 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.0"
-group= "com.yourname.modid" 
-archivesBaseName = "modid"
+version = ${mod_version}
+group= ${package_group}
+archivesBaseName = ${mod_name}
 
 minecraft {
     version = "${mc_version}-${forge_version}"
