--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,9 @@
 mod_name=VoidRPG
 package_group=wurmatron
 mod_version=0.0.0-Alpha
-mc_version=1.11.2
+mc_version=1.12.2
 forge_version=latest
-jei_version=4.5.0.289
-tesla_version=1.11-1.3.0.51
+mcp_map=snapshot_20170624
+jei_version=4.7.11.101
+tesla_version=1.0.62
+chiselandbits_version=14.8
